--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang=""><head>
    <meta charset="utf-8">
@@ -10,7 +9,7 @@
 </head>
 <html>
 <head>
-<title>ParallecScrolling</title>
+<title>Elite</title>
 <style type="text/css">
 	*{
 	margin: 0px;
@@ -51,8 +50,121 @@
    <li class="last"><a href="#"><span>Contact</span></a></li>
 </ul>
 </div>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="firstcs.min.css">
+<link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet" type="text/css">
+
+<meta class="foundation-mq"></head>
+<body>
+<div class="off-canvas-wrapper">
+<div class="off-canvas-wrapper-inner" data-off-canvas-wrapper="">
+<div data-offcanvas="ooysww-offcanvas" aria-hidden="true" class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas="" data-position="left">
+<div class="row column">
+<br>
+<img class="thumbnail" src="http://placehold.it/550x350">
+<h5>Placeholder</h5>
+<p>Placeholder text</p>
+</div>
+</div>
+<div class="off-canvas-content" data-off-canvas-content="">
+<div class="title-bar hide-for-large">
+<div class="title-bar-left">
+<button aria-controls="my-info" aria-expanded="false" class="menu-icon" type="button" data-open="my-info"></button>
+<span class="title-bar-title">Mike Mikerson</span>
+</div>
+</div>
+
+<div class="row small-up-2 medium-up-3 large-up-4">
+<div class="column">
+<a href="tech.html">
+<img class="thumbnail" src="http://placehold.it/550x550">
+</a>
+<h5>Tech</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="http://placehold.it/550x550">
+<h5>PlaceHolder</h5>
+</div>
+</div>
+<hr>
+<div class="row">
+<div class="medium-6 columns">
+<h3>Contact Me</h3>
+<p>PlaceHolder.</p>
+<ul class="menu">
+<li><a href="#">Dribbble</a></li>
+<li><a href="#">Facebook</a></li>
+<li><a href="#">Yo</a></li>
+</ul>
+</div>
+<div class="medium-6 columns">
+<label>Name
+<input placeholder="Name" type="text">
+</label>
+<label>Email
+<input placeholder="Email" type="text">
+</label>
+<label>
+Message
+<textarea placeholder="holla at a designerd"></textarea>
+</label>
+<button class="button expanded">Submit
+</button></div>
+</div>
+<div class="js-off-canvas-exit"></div></div>
+</div>
+</div>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="script.js"></script>
+<script>
+      $(document).foundation();
+    </script>
+
+
 </body>
-<font size="5"  color="#ff6600"> This is some text!</font>
+</body>
 </div>
 
 
