--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </script>
 </head>
 <body>
-<img id="image" src="img/bg.jpg" height="710px" width="100%" />
+<img id="image" src="img/bg1.jpg" height="710px" width="100%" />
 <div id="content">
 	<div id="cssmenu">
 <ul>
