--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="title-bar hide-for-large">
 <div class="title-bar-left">
 <button aria-controls="my-info" aria-expanded="false" class="menu-icon" type="button" data-open="my-info"></button>
-<span class="title-bar-title">Mike Mikerson</span>
+<span class="title-bar-title">Auriga</span>
 </div>
 </div>
 
