--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </label>
 <label>
 Message
-<textarea placeholder="holla at a designerd"></textarea>
+<textarea placeholder="Enter your message!"></textarea>
 </label>
 <button class="button expanded">Submit
 </button></div>
