--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 <h3>Contact Me</h3>
 <p>PlaceHolder.</p>
 <ul class="menu">
-<li><a href="#">Dribbble</a></li>
+<li><a href="#">Twitter</a></li>
 <li><a href="#">Facebook</a></li>
-<li><a href="#">Yo</a></li>
+<li><a href="#">Github</a></li>
 </ul>
 </div>
 <div class="medium-6 columns">
